--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.7",
+    "secure-random": "^1.1.2",
     "typescript": "^5.4.5"
   }
 }
